# Personal-Image-Viewer

./: .codespellrc  .coveragerc  .flake8  .gitignore  .isort.cfg  .mypy.ini  .pylintrc  .pytest.ini  .ruff.toml  Makefile  README.md  __main__.py  compile.py  config_schema_validator.py  main.py  pyproject.toml  requirements.txt  requirements_compile.txt  requirements_dev.txt  run_perf_test.py  tcl_bad.txt  tcl_good.txt  todo.md
.github/workflows/: validate-code.yml
compile_utils/: args.py  build_setup.py  cleaner.py  code_to_skip.py  constants.py  custom_python.py  exceptions.py  file_operations.py  log.py  module_dependencies.py  nuitka_ext.py  piv_plugin.py  simple_tcl_parser.py  validation.py
compile_utils/nuitka_plugins/: piv_plugin.py
docs/: compile.md
docs/compiling/: building_PIL_windows.md
docs/debugging/: README.md  launch.json  vscode.md
image_viewer/: __main__.py  _abstract_classes.pyi  _config.pyi  config.ini  config.py  constants.py  exceptions.py  viewer.py
image_viewer/actions/: _actions.pyi  types.py  undoer.py
image_viewer/c_extensions/: abstract_classes.c  config.c
image_viewer/c_extensions/actions/: actions.c  actions.h
image_viewer/c_extensions/b64/: cencode.c
image_viewer/c_extensions/image/: read.c  read.h
image_viewer/files/: actions.py  file_dialog_asker.py  file_manager.py
image_viewer/image/: _read.pyi  cache.py  file.py  frame.py  image_io.py  io.py  loader.py  resizer.py  state.py
image_viewer/state/: base.py  rotation_state.py  zoom_state.py
image_viewer/ui/: base.py  button.py  button_icon_factory.py  canvas.py  image.py  rename_entry.py
image_viewer/util/: PIL.py  _generic.pyi  _os_nt.pyi  convert.py  io.py  os.py  os.pyi
image_viewer/utils/: PIL.py  _os_linux.pyi  _os_nt.pyi  convert.py  os.py
perf/: _base.py  _config.py  config.py  keybind.py
tests/: conftest.py  memory_leak.py  setup.py  test_action_undoer.py  test_animation_frame.py  test_button_icon_factory.py  test_canvas.py  test_config.py  test_convert.py  test_exceptions.py  test_file_actions.py  test_file_manager.py  test_frame.py  test_image_cache.py  test_image_file.py  test_image_io.py  test_image_loader.py  test_image_resizer.py  test_main.py  test_memory_leaks.py  test_rename_entry.py  test_state.py  test_ui.py  test_util_PIL.py  test_util_os.py  test_viewer.py  test_zoom_state.py
tests/c_extensions/: test_utils_os_nt.py
tests/data/: config.ini  config_bad_values.ini
tests/example_images/: e.dds  f.avif
tests/memory_leaks/: find.py
tests/test_util/: exception.py  mocks.py
tests/utils/: _c_bindings.pyi  _config.pyi  mocks.py
(+25 files in other folders)
