[project]
authors = [
  {name = "James Demetris"},
]
name = "Personal-Image-Viewer"
version = "1.0.0"
readme = "README.md"
requires-python = "~=3.12.0"

[tool.codespell]
skip = "build,minifier_failure.py.example"

[tool.coverage.run]
omit = ["__init__.py", "main.py"]

[tool.mypy]
python_version = "3.12"
disallow_subclassing_any = true
disallow_untyped_defs = true
check_untyped_defs=true
ignore_missing_imports = true
exclude = "build/|test.py"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_subclassing_any = false
disallow_untyped_defs = false

[tool.pytest]
pythonpath = ["image_viewer"]
testpaths = ["tests"]
markers = [
    "memory_leak: Tests that check if compiled C extensions leak memory"
]
