[project]
authors = [
  {name = "James Demetris"},
]
name = "Personal-Image-Viewer"
version = "1.0.0"
readme = "README.md"
requires-python = "~=3.12.0"

[tool.codespell]
skip = "build,minifier_failure.py.example"

[tool.coverage.run]
omit = ["__init__.py", "main.py"]

[tool.mypy]
python_version = "3.12"
exclude = "build/|test.py"
disallow_subclassing_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
no_implicit_reexport = false
strict_equality  = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_subclassing_any = false

[tool.pytest]
pythonpath = ["image_viewer"]
testpaths = ["tests"]
markers = [
    "memory_leak: Tests that check if compiled C extensions leak memory"
]
