[project]
authors = [
  {name = "James Demetris"},
]
name = "Personal-Image-Viewer"
version = "1.0.0"
readme = "README.md"
requires-python = "~=3.12.0"

[tool.codespell]
skip = "build,minifier_failure.py.example"

[tool.coverage.run]
omit = ["__init__.py", "main.py"]

[tool.mypy]
python_version = "3.12"
exclude = "build/|test.py"
ignore_missing_imports = true  # Handled by ruff
disallow_subclassing_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_return_any = false  # All false-positives
no_implicit_reexport = false
strict_equality = true
strict_bytes = true
extra_checks = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_subclassing_any = false

[tool.pytest]
pythonpath = ["image_viewer"]
testpaths = ["tests"]
markers = [
    "memory_leak: Tests that check if compiled C extensions leak memory"
]
